[package]
name = "harbourmaster"
description = "Convenient, high-level abstractions of running Docker containers"
version = "0.2.0"
homepage = "https://github.com/danieleades/canister"
readme = "README.md"
keywords = ["docker", "containerised", "shiplift", "async"]
authors = ["Daniel Eades <danieleades@hotmail.com>"]
edition = "2018"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "danieleades/harbourmaster" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shiplift = "0.5.0"
rand = "0.6.5"
log = "0.4.6"
tokio = "0.1.20"
lazy_static = "1.3.0"
futures-preview = { version = "0.3.0-alpha.14", features = ["compat"] }

[build-dependencies]
cargo-readme = "3.1.2"
