[package]
name = "harbourmaster"
description = "Convenient, high-level abstractions of running Docker containers"
version = "0.5.0"
homepage = "https://github.com/danieleades/harbourmaster"
readme = "README.md"
keywords = ["docker", "containerised", "shiplift", "async"]
authors = ["Daniel Eades <danieleades@hotmail.com>"]
edition = "2018"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "danieleades/harbourmaster" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
log = "0.4.14"
lazy_static = "1.4.0"
shiplift = "0.7.0"
futures-util = "0.3.18"

[dev-dependencies]
tokio = { version = "1.14.0", features = ["rt", "macros", "rt-multi-thread"] }

[build-dependencies]
cargo-readme = "3.2.0"
